[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
serde = "1.0.219"
axum = { version = "0.7.4", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
axum-proxy = { version = "0.4.1", features = ["http1"] }
tower-service = "0.3.3"
deadpool-redis = "0.20.0"
axum-macros = "0.5.0"